# OpenShell

./: .gitlab-ci.yml
crates/openshell-pii/: Cargo.toml
crates/openshell-pii-proxy/: Cargo.toml
crates/openshell-pii-proxy/src/: health.rs  main.rs  policy.rs  proxy.rs
crates/openshell-pii/src/: engine.rs  entities.rs  lib.rs  ner_client.rs  policy.rs  redactor.rs
crates/openshell-policy/src/: lib.rs
crates/openshell-sandbox/: Cargo.toml
crates/openshell-sandbox/src/: lib.rs  opa.rs  proxy.rs
crates/openshell-sandbox/src/l7/: mod.rs  relay.rs  rest.rs
crates/openshell-supply-chain/: Cargo.toml
crates/openshell-supply-chain/src/: denylist.rs  lib.rs  license.rs  osv_client.rs  policy.rs  registry.rs  version.rs
tasks/: python.toml
