[package]
name = "openshell-pii-proxy"
description = "Lightweight HTTP reverse proxy with PII detection for inference requests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "pii-policy-proxy"
path = "src/main.rs"

[dependencies]
openshell-pii = { path = "../openshell-pii" }

tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }

[lints]
workspace = true
