# SPDX-FileCopyrightText: Copyright (c) 2025-2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "openshell-pii"
description = "Regex-based PII detection engine for OpenShell L7 inspection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
regex = "1"
serde = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
